[FIX] alignment icons an images

--- a/src/Components/AboutUs/OurTeam/OurTeam.css
+++ b/src/Components/AboutUs/OurTeam/OurTeam.css
@@ -28,8 +28,8 @@
 }
 
 .TeamMember {
-    height: 400px;
-    width: 400px;
+    height: 300px;
+    width: 300px;
     border-radius: 5px;
 }
 
@@ -64,7 +64,7 @@
 } */
 
 .hoverTextData {
-    font-size: 21px;
+    font-size: 18px;
     font-family: 'Josefin Sans';
     /* margin-bottom: 3px; */
     text-align: left;
